spacing fixes

--- a/sass/layout/_template-events.scss
+++ b/sass/layout/_template-events.scss
@@ -29,6 +29,7 @@
 	}
 	&__meta {
 		grid-row: 2 / 3;
+		grid-column: 2 / 3;
 		@include mixins.displayFlex(row, space-evenly);
 		@include mixins.respond(Laptop) {
 			grid-column: unset;
@@ -94,6 +95,7 @@
 
 .the-sidebar {
 	grid-column: 2 / 3;
+	grid-row: 4 / 7;
 	@include mixins.respond(Laptop) {
 		grid-column: 1 / 2;
 		grid-row: auto;
